force-app/main/default/objects/Affordability__c/Affordability__c.object-meta.xml
<CustomObject>
    <label>Affordability</label>
    <nameField>
        <displayFormat>AFF- {00000000}</displayFormat>
        <label>Affordability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affordability</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>