force-app/main/default/objects/Affordability__c/fields/Alcohol__c.field-meta.xml
<CustomField>
    <fullName>Alcohol__c</fullName>
    <label>Alcohol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>