force-app/main/default/objects/Affordability__c/fields/Car_costs__c.field-meta.xml
<CustomField>
    <fullName>Car_costs__c</fullName>
    <label>Car costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>