force-app/main/default/objects/Affordability__c/fields/Changes_next_5_years__c.field-meta.xml
<CustomField>
    <fullName>Changes_next_5_years__c</fullName>
    <label>Changes next 5 years?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>