force-app/main/default/objects/Affordability__c/fields/Cigarettes__c.field-meta.xml
<CustomField>
    <fullName>Cigarettes__c</fullName>
    <label>Cigarettes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>