force-app/main/default/objects/Affordability__c/fields/Clothes__c.field-meta.xml
<CustomField>
    <fullName>Clothes__c</fullName>
    <label>Clothes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>