force-app/main/default/objects/Affordability__c/fields/Clothing__c.field-meta.xml
<CustomField>
    <fullName>Clothing__c</fullName>
    <label>Clothing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>