force-app/main/default/objects/Affordability__c/fields/Council_Tax__c.field-meta.xml
<CustomField>
    <fullName>Council_Tax__c</fullName>
    <label>Council Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>