force-app/main/default/objects/Affordability__c/fields/Day_care__c.field-meta.xml
<CustomField>
    <fullName>Day_care__c</fullName>
    <label>Day care</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>