force-app/main/default/objects/Affordability__c/fields/Electric__c.field-meta.xml
<CustomField>
    <fullName>Electric__c</fullName>
    <label>Electric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>