force-app/main/default/objects/Affordability__c/fields/Entertainment__c.field-meta.xml
<CustomField>
    <fullName>Entertainment__c</fullName>
    <label>Entertainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>