force-app/main/default/objects/Affordability__c/fields/Gambling__c.field-meta.xml
<CustomField>
    <fullName>Gambling__c</fullName>
    <label>Gambling</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>