force-app/main/default/objects/Affordability__c/fields/Gas__c.field-meta.xml
<CustomField>
    <fullName>Gas__c</fullName>
    <label>Gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>