force-app/main/default/objects/Affordability__c/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <label>Holiday</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>