force-app/main/default/objects/Affordability__c/fields/Home_phone__c.field-meta.xml
<CustomField>
    <fullName>Home_phone__c</fullName>
    <label>Home phone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>