force-app/main/default/objects/Affordability__c/fields/Insurances__c.field-meta.xml
<CustomField>
    <fullName>Insurances__c</fullName>
    <inlineHelpText>Insurances (Other than B&amp;C) ie, life, health, medical, denta;, phone etc</inlineHelpText>
    <label>Insurances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>