force-app/main/default/objects/Affordability__c/fields/Investments__c.field-meta.xml
<CustomField>
    <fullName>Investments__c</fullName>
    <label>Investments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>