force-app/main/default/objects/Affordability__c/fields/Leisure__c.field-meta.xml
<CustomField>
    <fullName>Leisure__c</fullName>
    <label>Leisure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>