force-app/main/default/objects/Affordability__c/fields/Maintenance_Payments__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Payments__c</fullName>
    <label>Maintenance Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>