force-app/main/default/objects/Affordability__c/fields/Mortgage_rent__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_rent__c</fullName>
    <label>Mortgage/ rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>