force-app/main/default/objects/Affordability__c/fields/Motor_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Motor_Insurance__c</fullName>
    <label>Motor Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>