force-app/main/default/objects/Affordability__c/fields/MW_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>MW_Case_ID__c</fullName>
    <label>MW Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>