force-app/main/default/objects/Affordability__c/fields/Open_Banking_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Open_Banking_Reference_Number__c</fullName>
    <label>Open Banking Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>