force-app/main/default/objects/Affordability__c/fields/Other_schooling_costs__c.field-meta.xml
<CustomField>
    <fullName>Other_schooling_costs__c</fullName>
    <inlineHelpText>Other schooling costs ie. Meals, uniform, outings etc</inlineHelpText>
    <label>Other schooling costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>