force-app/main/default/objects/Affordability__c/fields/Other_transport_cost__c.field-meta.xml
<CustomField>
    <fullName>Other_transport_cost__c</fullName>
    <label>Other transport cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>