force-app/main/default/objects/Affordability__c/fields/Petrol__c.field-meta.xml
<CustomField>
    <fullName>Petrol__c</fullName>
    <label>Petrol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>