force-app/main/default/objects/Affordability__c/fields/Random_expense__c.field-meta.xml
<CustomField>
    <fullName>Random_expense__c</fullName>
    <label>Random expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>