force-app/main/default/objects/Affordability__c/fields/Regular_subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Regular_subscriptions__c</fullName>
    <inlineHelpText>Regular subscriptions (ie. Newspaper, Magazines, Health club, Golf) £0
Pets- food, insurance, grooming etc</inlineHelpText>
    <label>Regular subscriptions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>