force-app/main/default/objects/Affordability__c/fields/Schooling__c.field-meta.xml
<CustomField>
    <fullName>Schooling__c</fullName>
    <label>Schooling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>