force-app/main/default/objects/Affordability__c/fields/Sports__c.field-meta.xml
<CustomField>
    <fullName>Sports__c</fullName>
    <label>Sports</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>