force-app/main/default/objects/Affordability__c/fields/Television__c.field-meta.xml
<CustomField>
    <fullName>Television__c</fullName>
    <label>Television</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>