force-app/main/default/objects/Affordability__c/fields/Transport_travel__c.field-meta.xml
<CustomField>
    <fullName>Transport_travel__c</fullName>
    <label>Transport Travel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>