force-app/main/default/objects/Affordability__c/fields/TV_internet_communication__c.field-meta.xml
<CustomField>
    <fullName>TV_internet_communication__c</fullName>
    <label>TV Internet Communication</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>