force-app/main/default/objects/Affordability__c/fields/Water__c.field-meta.xml
<CustomField>
    <fullName>Water__c</fullName>
    <label>Water</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>